--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,14 @@
     Created on : 28.10.2015, 15:48:24
     Author     : Roman Sorokin
 */
-
+body {
+    margin: 0px;
+    padding: 0px;
+}
 .control {
     float: left;
-    width: 350px;
+    width: 340px;
+    padding: 10px;
 }
 .control input {
     width: 100%;
@@ -16,16 +20,18 @@
     color: #ccc;
 }
 .atmosphere{
-    height: 800px;
-    border: 1px solid blue;
+    height: 820px;
+    border: 1px solid #3a62b2;
+    background: #3a62b2;
     margin-left: 360px;
+    padding-left: 50%;
+    border-bottom: 10px solid greenyellow;
 }
 #balloonDiv {
-    width: 50px;
-    height: 50px;
-    background-color: rgb(125,0,0);
-    margin-left: 200px;
-    margin-top: 748px;
-    border-radius: 24px;
-    border-bottom: 2px solid black;
+    width: 75px;
+    height: 75px;
+    background:url('../img/balloon.png') top center;
+    margin-left: -235px;
+    margin-top: 800px;
+    
 }
